--- a/app/src/main/res/values/wallet_strings.xml
+++ b/app/src/main/res/values/wallet_strings.xml
@@ -307,24 +307,24 @@
     <string name="wallet_have_apply_for_idhub_vip">请先升级成为IdHub会员之后再次尝试申请</string>
     <string name="wallet_have_apply_for_qualified_investor_vip">请先升级成为合格投资人之后再次尝试申请</string>
     <string name="wallet_have_apply_for_qualified_purchaser_vip">请先升级成为合格购买人之后再次尝试申请</string>
-    <string name="wallet_idhub_vip_content">IDHub基于区块链技术的去中心化数字身份将身份控制权收回到个人手中，为用户塑造完整、可信的自主身份，构建以用户为主导的数字身份管理和应用平台，以及安全、自主、可信的身份管理机制。</string>
-    <string name="wallet_idhub_super_vip_content">IDHub建立在开放原则之上，通过区块链技术，对个人身份的有效性、真实性、唯一性进行合理验证，力求将身份控制权由第三方信息服务机构重新收回到个人手中，为用户塑造完整、可信的自主身份，构建以用户为主导的数字身份管理和应用平台，以及安全、自主、可信的身份管理机制，并为用户在证券通证领域提供合规检查及认证服务。</string>
+    <string name="wallet_idhub_vip_content">1.IDHub基于区块链技术的去中心化数字身份将身份控制权收回到个人手中，为用户塑造完整、可信的自主身份，构建以用户为主导的数字身份管理和应用平台，以及安全、自主、可信的身份管理机制。</string>
+    <string name="wallet_idhub_super_vip_content">1.IDHub建立在开放原则之上，通过区块链技术，对个人身份的有效性、真实性、唯一性进行合理验证，力求将身份控制权由第三方信息服务机构重新收回到个人手中，为用户塑造完整、可信的自主身份，构建以用户为主导的数字身份管理和应用平台，以及安全、自主、可信的身份管理机制，并为用户在证券通证领域提供合规检查及认证服务。</string>
 
-    <string name="wallet_compliance_investor_vip_content">1、同时成为ST合格投资人和合格购买人之后即为证券通证合规投资者
-2、成为ST合规投资者之后可参与STO申购及证券通证交易
-3、ST合规投资者仍要受到证券通证发行区域的法律限制
-4、不同司法管辖区的证券通证合规投资者的权利不同，详情参考具体的证券通证细节</string>
+    <string name="wallet_compliance_investor_vip_content">1、同时成为ST合格投资人和合格购买人之后即为证券通证合规投资者\n
+2、成为ST合规投资者之后可参与STO申购及证券通证交易\n
+3、ST合规投资者仍要受到证券通证发行区域的法律限制\n
+4、不同司法管辖区的证券通证合规投资者的权利不同，详情参考具体的证券通证细节\n</string>
 
     //upgrade
-    <string name="wallet_upgrade_hint">用户提示:
-1、用户默认身份采用ERC1056协议，只允许进行单地址管理。
-2、用户可以升级为聚合身份采用ERC1484协议，只有升级为聚合身份之后才可以进行多地址管理，原有地址被设置为默认地址。
-3、当用户要调用ERC1484合约升级身份，需要用户默认地址有足够的ETH余额支付以太坊交易燃料（gas）。
-4、用户升级为聚合身份之后，可以自由选择将地址添加为聚合身份的关联地址。
-5、每个地址只可以关联一个聚合身份，每个聚合身份拥有一个恢复地址。
-6、恢复地址应当采用冷钱包形式存储，此应用不会存储任何和恢复地址相关的备份信息，请务必注意。
-7、恢复地址可以在您钱包被盗或不小心丢失的情况下帮助您恢复聚合身份的控制权，重新下载此应用点击“恢复身份”按钮即可进入恢复页面。
-8、如果您的恢复地址被恶意盗用，请及时联系客服。</string>
+    <string name="wallet_upgrade_hint">用户提示:\n
+1、用户默认身份采用ERC1056协议，只允许进行单地址管理。\n
+2、用户可以升级为聚合身份采用ERC1484协议，只有升级为聚合身份之后才可以进行多地址管理，原有地址被设置为默认地址。\n
+3、当用户要调用ERC1484合约升级身份，需要用户默认地址有足够的ETH余额支付以太坊交易燃料（gas）。\n
+4、用户升级为聚合身份之后，可以自由选择将地址添加为聚合身份的关联地址。\n
+5、每个地址只可以关联一个聚合身份，每个聚合身份拥有一个恢复地址。\n
+6、恢复地址应当采用冷钱包形式存储，此应用不会存储任何和恢复地址相关的备份信息，请务必注意。\n
+7、恢复地址可以在您钱包被盗或不小心丢失的情况下帮助您恢复聚合身份的控制权，重新下载此应用点击“恢复身份”按钮即可进入恢复页面。\n
+8、如果您的恢复地址被恶意盗用，请及时联系客服。\n</string>
 
 
     //recoveryIdentity
