--- a/app/src/main/res/layout/wallet_fragment_me_top_view.xml
+++ b/app/src/main/res/layout/wallet_fragment_me_top_view.xml
@@ -54,6 +54,7 @@
 
             <TextView
                 android:id="@+id/tv_ein"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
