--- a/app/src/main/res/values-en/wallet_strings.xml
+++ b/app/src/main/res/values-en/wallet_strings.xml
@@ -401,4 +401,8 @@
 
 
 
+    <string name="wallet_user_info_name">Username</string>
+    <string name="wallet_user_info_did">DID</string>
+
+
 </resources>
