--- a/app/src/main/res/layout/wallet_common_title_layout.xml
+++ b/app/src/main/res/layout/wallet_common_title_layout.xml
@@ -12,7 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="11dp"
-        android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:src="@mipmap/wallet_back_black_icon"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,7 +23,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:text="@string/wallet_back"
         android:textColor="@color/wallet_text_black"
@@ -54,7 +52,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="6dp"
-        android:padding="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp"
         android:textColor="@color/wallet_text_black"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -66,7 +66,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="6dp"
-        android:padding="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp"
         android:textColor="@color/wallet_text_black"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
