--- a/app/src/main/res/layout/wallet_activity_wallet_manager.xml
+++ b/app/src/main/res/layout/wallet_activity_wallet_manager.xml
@@ -17,12 +17,12 @@
 
         <ImageView
             android:id="@+id/iv_head"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="12dp"
-            android:src="@drawable/wallet_me_icon"
+            android:src="@mipmap/wallet_wallet_head"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +44,9 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="12dp"
             android:singleLine="true"
+            android:layout_marginTop="6dp"
             android:ellipsize="middle"
+            android:drawableRight="@mipmap/wallet_copy_blue"
             app:layout_constraintLeft_toLeftOf="@id/tv_wallet_name"
             app:layout_constraintTop_toBottomOf="@id/tv_wallet_name"
             tools:text="dsakjdaskjfaskjals" />
