--- a/app/src/main/res/values/wallet_colors.xml
+++ b/app/src/main/res/values/wallet_colors.xml
@@ -43,4 +43,7 @@
     <color name="wallet_main_tab_color_normal">#b5b5b5</color>
     <color name="wallet_main_address">#687aa5</color>
     <color name="wallet_upload_btn_color">#37c4bb</color>
+
+    <color name="wallet_transparent">#00000000</color>
+
 </resources>
