--- a/app/src/main/res/values/wallet_styles.xml
+++ b/app/src/main/res/values/wallet_styles.xml
@@ -54,4 +54,13 @@
         <item name="android:windowEnterAnimation">@anim/wallet_date_picker_in</item>
         <item name="android:windowExitAnimation">@anim/wallet_date_picker_out</item>
     </style>
+
+
+    <style name="WalletShowDialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowBackground">@color/wallet_transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
 </resources>
