--- a/app/src/main/res/layout/wallet_activity_input_password.xml
+++ b/app/src/main/res/layout/wallet_activity_input_password.xml
@@ -128,10 +128,10 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
-
-
     <include
         android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
         layout="@layout/wallet_common_title_layout"
         app:layout_constraintTop_toTopOf="parent" />
 
