--- a/app/src/main/res/layout/wallet_activity_user_info_show.xml
+++ b/app/src/main/res/layout/wallet_activity_user_info_show.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
         app:layout_constraintTop_toBottomOf="@id/title">
 
 
@@ -31,7 +31,21 @@
             android:layout_height="50dp"
             android:layout_marginRight="12dp"
             android:src="@mipmap/wallet_default_head" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="12dp"
+            android:src="@mipmap/wallet_arrow_right" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@color/wallet_line_gray"
+        app:layout_constraintTop_toBottomOf="@id/ll_head" />
 
     <LinearLayout
         android:id="@+id/ll_name"
@@ -59,7 +73,21 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="12dp"
             tools:text="sfdkjfh" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="12dp"
+            android:src="@mipmap/wallet_arrow_right" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@color/wallet_line_gray"
+        app:layout_constraintTop_toBottomOf="@id/ll_name" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ll_signature"
@@ -73,38 +101,58 @@
 
 
         <TextView
-            app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/tv_user_signature_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginLeft="16dp"
-            app:layout_constraintHorizontal_weight="1"
             android:text="@string/wallet_user_signature"
             android:textColor="@color/wallet_text_black"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                app:layout_constraintLeft_toRightOf="@id/tv_user_signature_name"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginLeft="10dp"
-                android:id="@+id/tv_user_signature"
-                android:gravity="right"
-                android:layout_width="0dp"
-                android:layout_marginRight="12dp"
-                android:layout_height="wrap_content"
-                tools:text="你稍等试试试" />
+        <TextView
+            android:id="@+id/tv_user_signature"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="12dp"
+            android:gravity="right"
+            android:singleLine="true"
+            android:ellipsize="end"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/tv_user_signature_name"
+            app:layout_constraintRight_toLeftOf="@id/arrow"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="你稍等试试试" />
+
+        <ImageView
+            android:id="@+id/arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="12dp"
+            android:src="@mipmap/wallet_arrow_right"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@color/wallet_line_gray"
+        app:layout_constraintTop_toBottomOf="@id/ll_signature" />
 
     <LinearLayout
         android:id="@+id/ll_EIN"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
         app:layout_constraintTop_toBottomOf="@id/ll_signature">
@@ -123,9 +171,19 @@
             android:id="@+id/tv_user_ein"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="5dp"
             android:layout_marginRight="12dp"
-            tools:text="sfdkjfh" />
+            tools:text="8" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@color/wallet_line_gray"
+        app:layout_constraintTop_toBottomOf="@id/ll_EIN" />
 
     <LinearLayout
         android:id="@+id/ll_recovery_address"
@@ -149,12 +207,24 @@
         <TextView
             android:id="@+id/tv_user_recovery_address"
             android:layout_width="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="16dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="5dp"
             android:layout_marginRight="12dp"
+            android:textSize="13sp"
+            android:drawableRight="@mipmap/wallet_copy_blue"
+            android:drawablePadding="5dp"
             tools:text="sfdk000000000000000000000000000jfhssssss" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@color/wallet_line_gray"
+        app:layout_constraintTop_toBottomOf="@id/ll_recovery_address" />
+
     <LinearLayout
         android:id="@+id/ll_did"
         android:layout_width="match_parent"
@@ -176,12 +246,21 @@
         <TextView
             android:id="@+id/tv_user_did"
             android:layout_width="match_parent"
-            android:layout_marginLeft="16dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:textSize="13sp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="12dp"
             tools:text="sf000000000000000000000000000000000000000000000000000dkjfh" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@color/wallet_line_gray"
+        app:layout_constraintTop_toBottomOf="@id/ll_did" />
 
     <include
         android:id="@+id/title"
