--- a/app/src/main/res/values/wallet_strings.xml
+++ b/app/src/main/res/values/wallet_strings.xml
@@ -375,5 +375,8 @@
     <string name="wallet_user_info_head">头像</string>
     <string name="wallet_user_info_name">名称</string>
     <string name="wallet_user_info_did">DID</string>
+    <string name="wallet_copy_success">复制成功</string>
+    <string name="wallet_update_user_name">修改用户名</string>
+    <string name="wallet_update_signature">修改签名</string>
 
 </resources>
