--- a/app/src/main/res/layout/wallet_popup_window_upload_file.xml
+++ b/app/src/main/res/layout/wallet_popup_window_upload_file.xml
@@ -41,6 +41,8 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="vertical"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/tv_file"
         app:layout_constraintTop_toBottomOf="@id/tv_take_photo">
