--- a/app/src/main/res/layout/wallet_show_message_dialog_view.xml
+++ b/app/src/main/res/layout/wallet_show_message_dialog_view.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
+        android:gravity="center"
         android:text="@string/wallet_please_input_password"
         android:textColor="@color/wallet_black"
         android:textSize="18sp"
@@ -33,39 +34,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="25dp"
-        android:paddingLeft="10dp"
-        android:layout_marginRight="20dp"
-        android:inputType="textPassword"
-        android:background="@drawable/wallet_shape_edittext"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/address" />
-
     <View
         android:id="@+id/line1"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="25dp"
         android:background="@color/wallet_line_gray"
-        app:layout_constraintTop_toBottomOf="@id/et_password" />
-
-<!--    <TextView-->
-<!--        android:id="@+id/tv_cancel"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="@string/wallet_cancel"-->
-<!--        android:textColor="@color/wallet_blue_text"-->
-<!--        android:textSize="16sp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toLeftOf="@id/line2"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/line1" />-->
+        app:layout_constraintTop_toBottomOf="@id/address" />
 
     <TextView
         android:id="@+id/tv_confirm"
@@ -80,12 +55,4 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/line1" />
 
-<!--    <View-->
-<!--        android:id="@+id/line2"-->
-<!--        android:layout_width="1dp"-->
-<!--        android:layout_height="50dp"-->
-<!--        android:background="@color/wallet_line_gray"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/line1" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
